--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <build>
         <resources>
             <resource>
-                <directory>src/main/java/dev/laarryy/playerheads/resources</directory>
+                <directory>src/main/resources</directory>
                 <filtering>true</filtering>
             </resource>
         </resources>
