--- a/pom.xml
+++ b/pom.xml
@@ -6,14 +6,16 @@
 
     <groupId>dev.laarryy</groupId>
     <artifactId>PlayerHeads</artifactId>
-    <version>4.2</version>
+    <version>1.0</version>
     <packaging>jar</packaging>
 
     <name>PlayerHeads</name>
 
     <properties>
+		<java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spigot.version>1.16.1-R0.1-SNAPSHOT</spigot.version>
+
+		<spigot.version>1.16.3-R0.1-SNAPSHOT</spigot.version>
     </properties>
 
     <build>
@@ -29,16 +31,16 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.7.0</version>
+                <version>3.8.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>3.1.0</version>
+                <version>3.2.4</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -59,10 +61,6 @@
             <id>spigotmc-repo</id>
             <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
         </repository>
-        <repository>
-            <id>bukkit-repo</id>
-            <url>http://maven.elmakers.com/repository/</url>
-        </repository>
     </repositories>
 
     <dependencies>
@@ -72,15 +70,11 @@
             <version>${spigot.version}</version>
             <scope>provided</scope>
         </dependency>
-        <dependency>
-            <groupId>org.spigotmc</groupId>
-            <artifactId>minecraft-server</artifactId>
-            <version>1.16.1-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.spigotmc</groupId>
-            <artifactId>spigot</artifactId>
-            <version>${spigot.version}</version>
-        </dependency>
+		<dependency>
+			<groupId>org.jetbrains</groupId>
+			<artifactId>annotations</artifactId>
+			<version>20.1.0</version>
+			<scope>provided</scope>
+		</dependency>
     </dependencies>
 </project>
