--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,5 @@
 main: dev.laarryy.playerheads.PlayerHeads
 name: PlayerHeads
-version: "4.2"
-api-version: "1.15"
+version: "${project.version}"
+api-version: "1.13"
+authors: [ Laarryy, Fehfo ]
