--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,12 @@
             <artifactId>adventure-api</artifactId>
             <version>4.1.1</version>
             <scope>compile</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.checkerframework</groupId>
+                    <artifactId>checker-qual</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
@@ -156,12 +162,6 @@
             <artifactId>matt-framework-gui</artifactId>
             <version>2.0.2</version>
             <scope>compile</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.jetbrains</groupId>
-                    <artifactId>annotations</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
 
         <dependency>
